new styles to css were added

--- a/fabler_django/first/templates/first/about.html
+++ b/fabler_django/first/templates/first/about.html
@@ -1,10 +1,10 @@
 {% extends 'first/layout.html' %}
 
-{% block title %}
-Main Page
+{% block title %} 
+About Me
 {% endblock %}
 
 {% block content %}
-<h1>Main Page</h1>
-<p>Main Page</p>
+<h1>About Me</h1>
+<p>About Me</p>
 {% endblock %}
