--- a/fabler_django/first/templates/first/layout.html
+++ b/fabler_django/first/templates/first/layout.html
@@ -15,18 +15,18 @@
 <body>
 
     <aside>
-        <img src="{% static 'first/img/catsandalien.svg' %}" alt = "Logo">
-        <span class="logo">Catliens</span>
+<!--        <img src="{% static 'first/img/logo.png' %}" alt = "Logo">-->
+        <span class="logo">Fabler</span>
         <ul>
             <table>
                 <td>
-                    <a href=""><i class="fa-solid fa-cat"></i> Main</a>
+                    <a href="">Main</a>
                 </td>
                  <td>
-                    <a href=""><i class="fa-solid fa-rocket"></i> About me</a>
+                    <a href="">Projects</a>
                  </td>
                  <td>
-                    <a href=""><i class="fa-solid fa-robot"></i> Contacts</a>
+                    <a href="">Contacts</a>
                 </td>
             </table>
         </ul>
