--- a/fabler_django/first/static/first/css/first.css
+++ b/fabler_django/first/static/first/css/first.css
@@ -1,35 +1,71 @@
+
+@font-face {
+font-family: "Bebas Neue Book";
+    src: url("../fonts/BebasNeue Regular.ttf") format("truetype");
+font-style: normal;
+font-weight: normal;
+ }
+@font-face {
+font-family: "Veles";
+    src: url("../fonts/Veles-Regular.0.9.2.otf") format("truetype");
+font-style: normal;
+font-weight: normal;
+ }
+@font-face {
+font-family: "Black Choco Ligerature";
+    src: url("../fonts/BlackChocoLigeratureRegular.ttf") format("truetype");
+font-style: normal;
+font-weight: normal;
+ }
+@font-face {
+font-family: "OstrichSans-Medium";
+    src: url("../fonts/OstrichSans-Medium.otf") format("truetype");
+font-style: normal;
+font-weight: normal;
+ }
+@font-face {
+font-family: "VictorMono";
+    src: url("../fonts/VictorMono-Medium.otf") format("truetype");
+font-style: normal;
+font-weight: normal;
+ }
+
 body {
-    background: #4D4861;
+    background: #F4ECE2;
 }
 
 aside {
     float: top;
-    background: #D5C7BC;
+    background: #F4ECE2;
     width: 100%;
-    padding: 0%;
+    padding: 2%;
     height: 20%;
     color: #454545;
-    border-bottom: 5px solid #4D4861;
+    border-bottom: 2px solid #F4ECE2;
 }
-aside img{
-    width: 150px;
-    float: left;
-}
+/*aside img{*/
+/*    width: 200px;*/
+/*    float: left;*/
+/*    margin-left: 1%;*/
+/*}*/
 
 aside .logo{
-    font-size: 40px;
+    font-size: 55px;
+    font-family:"Black Choco Ligerature";
     margin-left: 10px;
-    font-weight: bold;
+    /*margin-top: 70px;*/
+    /*font-weight: bold;*/
     position: relative;
-    top: 40px;
+    /*top: 2px;*/
 }
 aside ul {list-style: none}
 
 aside ul table{
-    background: #D5C7BC;
+    background: #F4ECE2;
     text-decoration: none;
-    margin-left: 450px;
-    margin-top: 0px;
+    margin-left: 55%;
+    margin-top: -70px;
+    font-family: "Bebas Neue Book";
     font-size: 25px;
 
 }
@@ -46,4 +82,75 @@ aside ul a:hover{
 aside ul a{
     color: #454545;
     text-decoration: none;
+}
+main h1{
+    font-family: "Black Choco Ligerature";
+    font-size: 60px;
+    color: darkred;
+    margin-left: 25%;
+    margin-top: 50px;
+}
+main p1{
+    font-family: "Black Choco Ligerature";
+    font-size: 40px;
+    color: #454545;
+    margin-left: 25%;
+    margin-top: -10px;
+}
+main p2{
+    font-family: "Black Choco Ligerature";
+    font-size: 60px;
+    color: darkred;
+    margin-left: 30%;
+    margin-top: 60px;
+}
+main p3{
+    font-family: "Calibri Light";
+    font-size: 18px;
+    color: #454545;
+    margin-left: 25%;
+    margin-top: 60px;
+}
+main p4{
+    font-family: "Calibri Light";
+    font-size: 18px;
+    color: #454545;
+    margin-left: 25%;
+    margin-top: 60px;
+}
+main p5{
+    font-family: "Calibri Light";
+    font-size: 18px;
+    color: #454545;
+    margin-left: 25%;
+    margin-top: 60px;
+}
+main p6{
+    font-family: "Calibri Light";
+    font-size: 18px;
+    color: #454545;
+    margin-left: 25%;
+    margin-top: 60px;
+}
+main p7{
+    font-family: "Calibri Light";
+
+    font-size: 18px;
+    color: #454545;
+    margin-left: 25%;
+    margin-top: 60px;
+}
+main p8{
+    font-family: "Calibri Light";
+
+    font-size: 18px;
+    color: #454545;
+    margin-left: 35%;
+    margin-top: 60px;
+}
+main img{
+    width: 700px;
+    float: right;
+    margin-right: 5%;
+    margin-top: -550px;
 }
