button and new page were added

--- a/fabler_django/first/templates/first/layout.html
+++ b/fabler_django/first/templates/first/layout.html
@@ -20,13 +20,16 @@
         <ul>
             <table>
                 <td>
-                    <a href="">Main</a>
+                    <a href="{% url 'fabler' %}">Fabler</a>
+                </td>
+                <td>
+                    <a href="{% url 'home' %}">Main</a>
                 </td>
                  <td>
-                    <a href="">Projects</a>
+                    <a href="{% url 'projects' %}">Projects</a>
                  </td>
                  <td>
-                    <a href="">Contacts</a>
+                    <a href="{% url 'about' %}">Contacts</a>
                 </td>
             </table>
         </ul>
