--- a/fabler_django/first/static/first/css/first.css
+++ b/fabler_django/first/static/first/css/first.css
@@ -68,6 +68,7 @@ aside ul table{
     font-family: "Bebas Neue Book";
     font-size: 25px;
 
+
 }
 aside ul table td{
     color: #454545;
@@ -75,13 +76,14 @@ aside ul table td{
 
 }
 aside ul a:hover{
-    color: #454545;
+    color: darkred;
     text-decoration: none;
 
 }
 aside ul a{
     color: #454545;
     text-decoration: none;
+
 }
 main h1{
     font-family: "Black Choco Ligerature";
@@ -134,7 +136,6 @@ main p6{
 }
 main p7{
     font-family: "Calibri Light";
-
     font-size: 18px;
     color: #454545;
     margin-left: 25%;
@@ -142,7 +143,6 @@ main p7{
 }
 main p8{
     font-family: "Calibri Light";
-
     font-size: 18px;
     color: #454545;
     margin-left: 35%;
@@ -153,4 +153,28 @@ main img{
     float: right;
     margin-right: 5%;
     margin-top: -550px;
+}
+
+main .feachers{
+    float:left;
+    color: #454545;
+    margin-top: 200px;
+    text-align: center;
+    width: 100%;
+}
+
+main .feachers p{
+    font-family: "Black Choco Ligerature";
+    font-size: 60px;
+    color: darkred;
+    margin-top: -100px;
+}
+main .feachers button{
+    font-family: "Black Choco Ligerature";
+    background-color: darkred;
+    color: #F4ECE2;
+    border-color: darkred;
+    font-size: 30px;
+    margin-top: 20px;
+    display: inline-block;
 }
